--- a/trabalho-tecnicas-prog/Proj-TP1-2023.cbp
+++ b/trabalho-tecnicas-prog/Proj-TP1-2023.cbp
@@ -13,7 +13,14 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
+					<Add directory="C:/Users/RCS/Desktop/Trab-TP1/Trabalho-TP1-UNB/trabalho-tecnicas-prog/" />
 				</Compiler>
+				<ResourceCompiler>
+					<Add directory="C:/Users/RCS/Desktop/Trab-TP1/Trabalho-TP1-UNB/trabalho-tecnicas-prog/" />
+				</ResourceCompiler>
+				<Linker>
+					<Add directory="C:/Users/RCS/Desktop/Trab-TP1/Trabalho-TP1-UNB/trabalho-tecnicas-prog/" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/Exemplos_de_aula" prefix_auto="1" extension_auto="1" />
