controladoras e interfaces de conta

--- a/trabalho-tecnicas-prog/Proj-TP1-2023.cbp
+++ b/trabalho-tecnicas-prog/Proj-TP1-2023.cbp
@@ -38,10 +38,11 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="controladoras.cpp" />
+		<Unit filename="controladoras.h" />
 		<Unit filename="dominios.cpp" />
 		<Unit filename="dominios.h" />
-		<Unit filename="entidades.cpp" />
-		<Unit filename="entidades.h" />
+		<Unit filename="interfaces/IAC.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="testes.cpp" />
 		<Unit filename="testes.h" />
