trabalho com modulo autenticaçao funcionando

--- a/trabalho-tecnicas-prog/Proj-TP1-2023.cbp
+++ b/trabalho-tecnicas-prog/Proj-TP1-2023.cbp
@@ -42,8 +42,11 @@
 		<Unit filename="controladoras.h" />
 		<Unit filename="dominios.cpp" />
 		<Unit filename="dominios.h" />
+		<Unit filename="interfaces/IAA.h" />
 		<Unit filename="interfaces/IAC.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="stubs.cpp" />
+		<Unit filename="stubs.h" />
 		<Unit filename="testes.cpp" />
 		<Unit filename="testes.h" />
 		<Extensions>
